BackendTF/eks/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: techscrum
  namespace: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: techscrum
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: techscrum
      labels:
        app.kubernetes.io/name: techscrum
    spec:
      containers:
        - name: techscrum
          image: 650635451238.dkr.ecr.ap-southeast-2.amazonaws.com/techscrum-ecr-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: techscrum
  namespace: backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/v2/health_check
  labels:
    app.kubernetes.io/name: techscrum
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30002
  selector:
    app.kubernetes.io/name: techscrum
