BackendTF/eks/k8s/web-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbwebappdeployment
  namespace: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: sb-web-app
      version: v1
      color: blue
  template:
    metadata:
      name: sbwebapppod
      labels:
        app: sb-web-app
        version: v1
        color: blue
    spec:
      containers:
        - name: sbwebappcontainer
          image: ashokit/sb-logger-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: sbappsvc
  namespace: backend
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health # 或您的自定义健康检查路径
spec:
  type: NodePort
  selector:
    app: sb-web-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30004
